; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_svm_disable_lbrv.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_svm_disable_lbrv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vcpu_svm = type { %struct.TYPE_4__*, i32* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@LBR_CTL_ENABLE_MASK = common dso_local global i32 0, align 4
@MSR_IA32_LASTBRANCHFROMIP = common dso_local global i32 0, align 4
@MSR_IA32_LASTBRANCHTOIP = common dso_local global i32 0, align 4
@MSR_IA32_LASTINTFROMIP = common dso_local global i32 0, align 4
@MSR_IA32_LASTINTTOIP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vcpu_svm*)* @svm_disable_lbrv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @svm_disable_lbrv(%struct.vcpu_svm* %0) #0 {
  %2 = alloca %struct.vcpu_svm*, align 8
  %3 = alloca i32*, align 8
  store %struct.vcpu_svm* %0, %struct.vcpu_svm** %2, align 8
  %4 = load %struct.vcpu_svm*, %struct.vcpu_svm** %2, align 8
  %5 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  store i32* %6, i32** %3, align 8
  %7 = load i32, i32* @LBR_CTL_ENABLE_MASK, align 4
  %8 = xor i32 %7, -1
  %9 = load %struct.vcpu_svm*, %struct.vcpu_svm** %2, align 8
  %10 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = and i32 %14, %8
  store i32 %15, i32* %13, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @MSR_IA32_LASTBRANCHFROMIP, align 4
  %18 = call i32 @set_msr_interception(i32* %16, i32 %17, i32 0, i32 0)
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* @MSR_IA32_LASTBRANCHTOIP, align 4
  %21 = call i32 @set_msr_interception(i32* %19, i32 %20, i32 0, i32 0)
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* @MSR_IA32_LASTINTFROMIP, align 4
  %24 = call i32 @set_msr_interception(i32* %22, i32 %23, i32 0, i32 0)
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @MSR_IA32_LASTINTTOIP, align 4
  %27 = call i32 @set_msr_interception(i32* %25, i32 %26, i32 0, i32 0)
  ret void
}

declare dso_local i32 @set_msr_interception(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
